Fix overlaping in index

--- a/style/index.css
+++ b/style/index.css
@@ -9,14 +9,7 @@ body{
   font-size: 62.5%;
 }
 /* Navigation styling */
-/* 
-bg-dark #272A31
-dark #272A31
-bg-orange #EC5242
-orange  #EC5242
-bg-grey #D3D3D3
-grey #D3D3D3
- */
+
  /* Color */
  .bg-dark {background: #272A31;}
  .dark{color: #272A31}
@@ -114,30 +107,31 @@ grey #D3D3D3
    opacity: 0.7;
  }
 
- .overlay .top-text{
+  .overlay .top-text{
   font-size: 2rem;
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
  }
 
  .overlay .middle-text{
-  font-size: 1rem;
-  position: absolute;
-  bottom: 10rem;
-  left: 4rem;
-  width: 60%;
+  font-size: 1.5rem;
+  width: 80%; 
   line-height: 1.5rem;
  }
 
  .overlay .bottom-text{
   font-size: 2rem;
-  position: absolute;
-  bottom: 0rem;
-  left: 4rem;
-  width: 40%;
  text-transform: capitalize;
- }
+ } 
+
+.index-wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+}
+
+
+
 
  /* Main-Program Style */
 
@@ -356,29 +350,9 @@ margin-bottom: 1rem;
    padding: 1rem;
  }
 
- .overlay .top-text{
-  font-size: 2.5rem;
-  position: absolute;
-  top: 6rem;
-  left: 1rem;
- }
-
  .overlay .middle-text{
   font-size: 1.5rem;
-  position: absolute;
-  bottom: 16rem;
-  left: 1rem;
-  width: 80%;
   line-height: 2rem;
- }
-
- .overlay .bottom-text{
-  font-size: 1.5rem;
-  position: absolute;
-  bottom: 0rem;
-  left: 1rem;
-  width: 40%;
- text-transform: capitalize;
  }
 
  .main-event{
